--- a/gpu-operator/Chart.yaml
+++ b/gpu-operator/Chart.yaml
@@ -1,24 +1,23 @@
 apiVersion: v2
-name: gpu-operator
-version: v1.0.0-devel
-kubeVersion: ">= 1.16.0-0"
+appVersion: v24.9.2
+dependencies:
+- condition: nfd.enabled
+  name: node-feature-discovery
+  repository: https://kubernetes-sigs.github.io/node-feature-discovery/charts
+  version: v0.16.6
 description: NVIDIA GPU Operator creates/configures/manages GPUs atop Kubernetes
-appVersion: "devel-ubi8"
+home: https://docs.nvidia.com/datacenter/cloud-native/gpu-operator/overview.html
 icon: https://assets.nvidiagrid.net/ngc/logos/GPUoperator.png
+keywords:
+- gpu
+- cuda
+- compute
+- operator
+- deep learning
+- monitoring
+- tesla
+kubeVersion: '>= 1.16.0-0'
+name: gpu-operator
 sources:
 - https://github.com/NVIDIA/gpu-operator
-home: https://docs.nvidia.com/datacenter/cloud-native/gpu-operator/overview.html
-keywords:
-  - gpu
-  - cuda
-  - compute
-  - operator
-  - deep learning
-  - monitoring
-  - tesla
-
-dependencies:
-  - name: node-feature-discovery
-    version: v0.16.6
-    repository: https://kubernetes-sigs.github.io/node-feature-discovery/charts
-    condition: nfd.enabled
+version: v24.9.2
